--- a/views/front/auth/myprofile.ejs
+++ b/views/front/auth/myprofile.ejs
@@ -20,7 +20,7 @@
                                     </div>
                                 </td>
                                 <td style="width: 70vw;">
-                                    <h3 class="text-lg font-semibold" style=" text-align: right;"> <ion-icon
+                                    <h3 @click="mesajEkle('<%= kisi._id %>')" class="text-lg font-semibold" style=" text-align: right;"> <ion-icon
                                             style="margin-top: -2px;" class="text-2xl" name="chatbubble-outline">
                                         </ion-icon> | <span style="color: crimson;">ABONE OL</span>
                                     </h3>
