--- a/views/front/part/footerflex.ejs
+++ b/views/front/part/footerflex.ejs
@@ -32,7 +32,9 @@
                 <img src="../../../paylas.png" style="height: 40px; top: 0px; bottom: 0px; left: 0px; right: 0px; margin:auto; margin-bottom: 4px;">
             </div>
         <% }else{ %>
-
+            <div style="flex: 2; align-items: center; justify-content: center;" uk-toggle="target: #create-post-modal">
+                <img src="../../../paylas.png" style="height: 40px; top: 0px; bottom: 0px; left: 0px; right: 0px; margin:auto; margin-bottom: 4px;">
+            </div>
         <% } %> 
     <% }else{ %>
 
