--- a/views/front/bildirim.ejs
+++ b/views/front/bildirim.ejs
@@ -5,7 +5,7 @@
         <div class="mcontainer">
                 <% if (user.type == 1) { %>
                     <% bildirim.forEach(element => { %>
-                            <% if (element.user == '*' && user.type == 1) { %>
+                            <% if (element.user == '*' || user.type == 2) { %>
                                 <div style="display: flex; flex-direction: row; padding-top: 4px;">
                                     <div style="flex:1; align-items: center; justify-content: center; padding-left: 5vw; padding-top: 3px;"><ion-icon name="notifications-outline" class="text-2xl" style="color: cornflowerblue;"></ion-icon> </div>
                                     <div style="flex:12">
@@ -18,7 +18,7 @@
                             <% } %>
                     <% }) %>
                 <% }else{ %>
-                    <% if (element.user == '*' && user.type == 1) { %>
+                    <% if (element.user == '#' || user.type == 1) { %>
                         <div style="display: flex; flex-direction: row; padding-top: 4px;">
                             <div style="flex:1; align-items: center; justify-content: center; padding-left: 5vw; padding-top: 3px;"><ion-icon name="notifications-outline" class="text-2xl" style="color: cornflowerblue;"></ion-icon> </div>
                             <div style="flex:12">
