--- a/views/front/index.ejs
+++ b/views/front/index.ejs
@@ -71,7 +71,7 @@
                                             <h3 class="text-lg font-semibold">
                                                 <%= element.title %>
                                             </h3>
-                                            <p class="text-sm text-gray-400 mb-2"> Yazar: <span data-href="%40tag-dev.html"> <%= element.user.name %> <%= element.user.surname %> </span> |
+                                            <p class="text-sm text-gray-400 mb-2"> Yazar: <span data-href="%40tag-dev.html"> <%= element.user.item.name %> </span> |
                                                 <%= moment(element.createdAt,"ddd MMM DD YYYY HH:mm:ss GMT Z'").fromNow(true) %> önce </span>
                                             </p>
                                             <div class="row" style="margin-top: -9px; margin-left: 1px;">
