--- a/views/front/mesaj/mesaj.ejs
+++ b/views/front/mesaj/mesaj.ejs
@@ -3,25 +3,44 @@
 
         <div class="main_content">
             <div class="mcontainer">
-                    <%= mesaj %> 
                     <% mesaj.forEach(element=> { %>
-                        <a href="/mesajic">
-                            <span class="badge">
-                                <table>
-                                    <tr>
-                                        <td style="width: 60px;"> <img src="<%= user.photo %>"
-                                                style="height: 50px; border-radius: 100px;"> </td>
-                                        <td>
-                                            <h3 class="text-2xl font-semibold"> <a href="/mesajic"> <%=
-                                                        element.user2.item.name %></a>
-                                            </h3>
-                                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
-                                        </td>
-                                    </tr>
-                                </table>
-                                <hr style="margin-top: 10px;">
-                            </span>
-                        </a>
+                        <% if (user._id == element.user1._id) { %>
+                            <a href="/mesajic">
+                                <span class="badge">
+                                    <table>
+                                        <tr>
+                                            <td style="width: 60px;"> <img src="<%= user.photo %>"
+                                                    style="height: 50px; border-radius: 100px;"> </td>
+                                            <td>
+                                                <h3 class="text-2xl font-semibold"> <a href="/mesajic"> <small>Giden : </small> <%=
+                                                            element.user2.item.name %></a>
+                                                </h3>
+                                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                                            </td>
+                                        </tr>
+                                    </table>
+                                    <hr style="margin-top: 10px;">
+                                </span>
+                            </a>
+                        <% }else{ %>
+                            <a href="/mesajic">
+                                <span class="badge">
+                                    <table>
+                                        <tr>
+                                            <td style="width: 60px;"> <img src="<%= user.photo %>"
+                                                    style="height: 50px; border-radius: 100px;"> </td>
+                                            <td>
+                                                <h3 class="text-2xl font-semibold"> <a href="/mesajic"> <small>Gelen : </small> <%=
+                                                            element.user2.item.name %></a>
+                                                </h3>
+                                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                                            </td>
+                                        </tr>
+                                    </table>
+                                    <hr style="margin-top: 10px;">
+                                </span>
+                            </a>
+                        <% } %> 
                     <% }) %>
 
             </div>
