--- a/views/front/layout.ejs
+++ b/views/front/layout.ejs
@@ -134,7 +134,7 @@
                     user2:data
                 }).then(response=>{
                     if (response.data.status == true) {
-                        console.log(response.data)
+                        window.location = "/mesaj"
                     } else {
                         console.log("Hata")
                     }
