--- a/views/front/part/footerflex.ejs
+++ b/views/front/part/footerflex.ejs
@@ -43,6 +43,6 @@
         <ion-icon name="notifications-outline" style="color: gray;" class="text-4xl"></ion-icon>
     </div>
     <div style="flex: 2; align-items: center; justify-content: center;">
-        <ion-icon name="chatbubble-outline" style="color: gray;" class="text-4xl"></ion-icon>
+        <a href="/mesaj"><ion-icon name="chatbubble-outline" style="color: gray;" class="text-4xl"></ion-icon></a>
     </div>
 </footer>
