--- a/views/front/mesaj/mesaj.ejs
+++ b/views/front/mesaj/mesaj.ejs
@@ -30,7 +30,7 @@
                                             <td style="width: 60px;"> <img src="<%= user.photo %>"
                                                     style="height: 50px; border-radius: 100px;"> </td>
                                             <td>
-                                                <h3 class="text-2xl font-semibold"> <a href="/mesajic"> <small>Gelen : </small> <%=
+                                                <h3 class="text-2xl font-semibold"> <a href="/mesajic/<%= element._id %>"> <small>Gelen : </small> <%=
                                                             element.user2.item.name %></a>
                                                 </h3>
                                                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
