--- a/views/front/mesaj/mesajicc.ejs
+++ b/views/front/mesaj/mesajicc.ejs
@@ -28,10 +28,9 @@
                     </h3>
                 </div>
                 <hr>
-                <div class="panel-body">
-                    <div class="chats" v-for="item in messages">
-                        {{item.user._id}}
-                        <div class="chat" v-if="item.user._id == '<%= user._id %>'">
+                <div class="panel-body" id="scrollChat" style="width: 100%; height: 82vh; overflow: scroll;">
+                    <div class="chats" v-for="item in messages" id="scrollChat">
+                        <div class="chat" v-if="item.user._id == '<%= user._id %>'" style="margin-top: -20px;">
                             <div class="chat-avatar">
                                 <a class="avatar avatar-online" data-toggle="tooltip" href="#" data-placement="right"
                                     title="" data-original-title="June Lane">
@@ -47,7 +46,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="chat chat-left" v-else>
+                        <div class="chat chat-left" v-else style="margin-top: -20px;">
                             <div class="chat-avatar">
                                 <a class="avatar avatar-online" data-toggle="tooltip" href="#" data-placement="left"
                                     title="" data-original-title="Edward Fletcher">
@@ -118,6 +117,12 @@
             },
             created(){
                 this.chatgetir()
+
+                setInterval(() => {
+                    $('#scrollChat').animate({
+                        scrollTop: $('#scrollChat')[0].scrollHeight
+                    }, "slow");
+                }, 1100);
             }
         })
     </script>
