--- a/views/front/mesaj/mesaj.ejs
+++ b/views/front/mesaj/mesaj.ejs
@@ -9,7 +9,7 @@
                                 <span class="badge">
                                     <table>
                                         <tr>
-                                            <td style="width: 60px;"> <img src="<%= user.photo %>"
+                                            <td style="width: 60px;"> <img src="<%= element.user1.photo %>"
                                                     style="height: 50px; border-radius: 100px;"> </td>
                                             <td>
                                                 <h3 class="text-2xl font-semibold"> <a href="/mesajic"> <small>Giden : </small> <%=
@@ -27,10 +27,10 @@
                                 <span class="badge">
                                     <table>
                                         <tr>
-                                            <td style="width: 60px;"> <img src="<%= user.photo %>"
+                                            <td style="width: 60px;"> <img src="<%= element.user2.photo %>"
                                                     style="height: 50px; border-radius: 100px;"> </td>
                                             <td>
-                                                <h3 class="text-2xl font-semibold"> <a href="/mesajic/<%= element._id %>"> <small>Gelen : </small> <%=
+                                                <h3 class="text-2xl font-semibold"> <a href="/mesajic/<%= element._id %>"> <%=
                                                             element.user2.item.name %></a>
                                                 </h3>
                                                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
