--- a/views/front/mesaj/mesajicc.ejs
+++ b/views/front/mesaj/mesajicc.ejs
@@ -23,8 +23,10 @@
             <div class="panel" id="chat">
                 <div class="panel-heading">
                     <h3 class="panel-title">
-                        <h3 class="text-center"> <i style="float: left;" class="fa fa-chevron-left"
-                                aria-hidden="true"></i> Ad Soyad</h3>
+                        <h3 class="text-center">
+                            <a href="/mesaj"><i style="float: left;" class="fa fa-chevron-left"
+                                aria-hidden="true"></i></a>
+                             Ad Soyad</h3>
                     </h3>
                 </div>
                 <hr>
