--- a/views/front/part/footerflex.ejs
+++ b/views/front/part/footerflex.ejs
@@ -40,7 +40,7 @@
 
     <% } %> 
     <div style="flex: 2; align-items: center; justify-content: center;">
-        <ion-icon name="notifications-outline" style="color: gray;" class="text-4xl"></ion-icon>
+        <a href="/bildirim"><ion-icon name="notifications-outline" style="color: gray;" class="text-4xl"></ion-icon></a>
     </div>
     <div style="flex: 2; align-items: center; justify-content: center;">
         <a href="/mesaj"><ion-icon name="chatbubble-outline" style="color: gray;" class="text-4xl"></ion-icon></a>
