--- a/views/front/medya/medya.ejs
+++ b/views/front/medya/medya.ejs
@@ -102,7 +102,15 @@
             if (input.files && input.files[0]) {
                 var reader = new FileReader();
                 reader.onload = function (e) {
-                    window.a = e.target.result
+                    axios.post("/cloudupload", {
+                        resim: e.target.result
+                    }).then(response => {
+                        if (response.data.status == true) {
+                            window.a = response.data.resim.secure_url
+                        } else {
+
+                        }
+                    })
                 };
                 reader.readAsDataURL(input.files[0]);
             }
