--- a/views/front/bildirim.ejs
+++ b/views/front/bildirim.ejs
@@ -7,7 +7,7 @@
                 <div style="display: flex; flex-direction: row; padding-top: 4px;">
                     <div style="flex:1; align-items: center; justify-content: center; padding-left: 5vw; padding-top: 3px;"><ion-icon name="notifications-outline" class="text-2xl" style="color: cornflowerblue;"></ion-icon> </div>
                     <div style="flex:12">
-                        <img src="../../../panpan.png" style="border-radius: 50px; margin-bottom: 6px; height: 40px;">
+                        <img src="<%= element.user.photo %>" style="border-radius: 50px; margin-bottom: 6px; height: 40px;">
                         <p style="margin-top: -11px;"> <a href="<%= element.url %>"><b>Sistem mesajı</b> <%= element.title %></a> </p>
                         <p style="line-height: 1.2;"> <small> <%= element.desc %> </small> </p>
                     </div>
