--- a/views/front/index.ejs
+++ b/views/front/index.ejs
@@ -72,9 +72,9 @@
                                                 <%= element.title %>
                                             </h3>
                                             <p class="text-sm text-gray-400 mb-2"> Yazar: <span data-href="%40tag-dev.html"> <%= element.user.item.name %> </span> |
-                                                <%= moment(element.createdAt,"ddd MMM DD YYYY HH:mm:ss GMT Z'").fromNow(true) %> önce </span>
+                                                <%= moment(element.createdAt,"ddd MMM DD YYYY HH:mm:ss GMT Z'").fromNow(true) %> önce </span> <span style="float: right; text-align: right;" class="text-sm"> <b> 123 </b> </span>
                                             </p>
-                                            <div class="row" style="margin-top: -9px; margin-left: 1px;">
+                                            <!-- <div class="row" style="margin-top: -9px; margin-left: 1px;">
                                                 <table>
                                                     <tr>
                                                         <td>
@@ -104,7 +104,7 @@
                                                         </td>
                                                     </tr>
                                                 </table>
-                                        </div>
+                                        </div> -->
                                 </a>
 
                                     </div>
