--- a/views/front/sozluk/single.ejs
+++ b/views/front/sozluk/single.ejs
@@ -24,7 +24,10 @@
             </a>
         </div>
         <div style="flex: 15;">
-            <h2 class="text-2xl font-semibold" style="margin-top: 0px;"> <%= konu.title.substring(0,40) %> <a> </h2>
+            <h3 style="margin-top: 0px;" class="text-lg font-semibold">
+                <%= konu.title.substring(0,40) %>
+            </h3>
+            <!-- <h2 class="text-2xl font-semibold" style="margin-top: 0px;"> <%= konu.title.substring(0,40) %> <a> </h2> -->
         </div>
         <div style="flex: 2;">
             
@@ -75,7 +78,7 @@
                                             <%= element.yorum %> <small> <a onclick="geriAl('<%=element._id%>')">Geri
                                                         al</a> </small>
                                         </p>
-                                        <div class="row" style="margin-left: 2vw; margin-top: 7px;">
+                                        <!-- <div class="row" style="margin-left: 2vw; margin-top: 7px;">
                                             <table>
                                                 <tr>
                                                     <td>
@@ -134,7 +137,7 @@
                                                     </td>
                                                 </tr>
                                             </table>
-                                        </div>
+                                        </div> -->
                                         <hr style="margin-top: 4px;">
 
                                     </div>
