--- a/views/front/sozluk/single.ejs
+++ b/views/front/sozluk/single.ejs
@@ -66,7 +66,7 @@
                                     </div>
                                 </div>
                                 <div class="flex">
-                                    <div>
+                                    <div style="width: 100%;">
                                         <br>
                                         <p class="leading-6" id="<%= element._id %>"
                                             style="font-size: 15pt; margin-left: -3vw; margin-right: -3vw;">
@@ -78,7 +78,7 @@
                                             <%= element.yorum %> <small> <a onclick="geriAl('<%=element._id%>')">Geri
                                                         al</a> </small>
                                         </p>
-                                        <!-- <div class="row" style="margin-left: 2vw; margin-top: 7px;">
+                                         <div class="row" style="margin-left: 2vw; margin-top: 7px;">
                                             <table>
                                                 <tr>
                                                     <td>
@@ -131,13 +131,13 @@
                                                     <td>
                                                         <div class="flex items-center">
                                                             <ion-icon class="text-2xl" style="padding-left: 9vw;"
-                                                                name="ellipsis-vertical"></ion-icon>
+                                                                name="share-outline"></ion-icon>
                                                             <span class="text-sm"></span>
                                                         </div>
                                                     </td>
                                                 </tr>
                                             </table>
-                                        </div> -->
+                                        </div>
                                         <hr style="margin-top: 4px;">
 
                                     </div>
