--- a/views/front/sozluk/single.ejs
+++ b/views/front/sozluk/single.ejs
@@ -81,7 +81,7 @@
                                          <div class="row" style="margin-left: 2vw; margin-top: 7px;">
                                             <table>
                                                 <tr>
-                                                    <td>
+                                                    <!-- <td>
                                                         <div class="flex items-center">
                                                             <ion-icon name="logo-facebook" class="text-2xl"></ion-icon>
                                                             <span class="text-sm"></span>
@@ -100,18 +100,18 @@
                                                                 class="text-2xl"></ion-icon>
                                                             <span class="text-sm"></span>
                                                         </div>
-                                                    </td>
+                                                    </td> -->
                                                     <td>
                                                         <div class="flex items-center"
                                                             @click="begen('<%= element._id %>')">
-                                                            <ion-icon id="<%= element._id %>" style="padding-left: 9vw;"
+                                                            <ion-icon id="<%= element._id %>"
                                                                 class="text-2xl" name="heart-outline"></ion-icon>
                                                             <span class="text-sm"></span>
                                                         </div>
                                                     </td>
                                                     <td>
                                                         <div class="flex items-center">
-                                                            <ion-icon style="padding-left: 9vw;" class="text-2xl"
+                                                            <ion-icon style="padding-left: 23vw;" class="text-2xl"
                                                                 name="chatbubble-ellipses-outline"></ion-icon>
 
                                                             <span class="text-sm"></span>
@@ -121,7 +121,7 @@
                                                         <div class="flex items-center">
                                                             <b>
                                                                 <ion-icon class="text-2xl"
-                                                                    style="color:#03A9F4; font-weight:bolder; padding-left: 9vw;"
+                                                                    style="color:#03A9F4; font-weight:bolder; padding-left: 23vw;"
                                                                     name="checkmark-outline"></ion-icon>
 
                                                             </b>
@@ -130,7 +130,7 @@
                                                     </td>
                                                     <td>
                                                         <div class="flex items-center">
-                                                            <ion-icon class="text-2xl" style="padding-left: 9vw;"
+                                                            <ion-icon class="text-2xl" style="padding-left: 23vw;"
                                                                 name="share-outline"></ion-icon>
                                                             <span class="text-sm"></span>
                                                         </div>
