--- a/views/front/sozluk/single.ejs
+++ b/views/front/sozluk/single.ejs
@@ -53,15 +53,27 @@
                     <div class="p-4 space-y-3">
                         <div class=" py-4 space-y-4 dark:border-" style="width: 100%;">
                             <% yorum.forEach(element=> { %>
-                                <div style="display: flex; flex-direction: row;">
+                                <div style="display: flex; flex-direction: row; width: 100%;">
                                     <div style="flex:8">
                                         <a href="/profil/<%= element.user._id %>"><img src="<%= element.user.photo %>"
                                                 style="border-radius: 75px; height: 45px; width: 45px;"></a>
                                     </div>
                                     <div style="flex:4">
-                                        <h3 class="text-lg font-semibold" style=" text-align: right;"> <ion-icon
+                                        
+                                        <h3 class="text-lg font-semibold" style="float: right; text-align: right;"> <ion-icon
                                                 style="margin-top: -2px;" class="text-2xl" name="chatbubble-outline">
-                                            </ion-icon> | <span style="color: crimson;">ABONE OL</span>
+                                            </ion-icon> | <span style="
+                                            text-transform: lowercase; 
+                                            display: inline-block;
+                                            text-align: center;
+                                            margin: 5px;
+                                            border-radius: 100px;
+                                            padding: 5px;
+                                            text-transform: capitalize;
+                                            background-color: #FFCDD2;
+                                            border: 1px solid #C62828;
+                                            color: #B71C1C;
+                                            text-decoration: none;">ABONE OL</span>
                                         </h3>
                                     </div>
                                 </div>
