--- a/views/front/sozluk/single.ejs
+++ b/views/front/sozluk/single.ejs
@@ -61,7 +61,8 @@
                                                 
                                     </div>
                                     <div style="flex:12;">
-                                        <span style="margin-top: 20px;"><b>Abdullah Bektaş</b></span>
+                                        <span style="margin-top: 20px;"><b>Abdullah Bektaş</b></span><br>
+                                        <span style="margin-top: 20px;"><b><small><%= moment(element.createdAt,"ddd MMM DD YYYY HH:mm:ss GMT Z'").fromNow(true) %> önce</small></b></span>
                                     </div>
                                     <div style="flex:4">
                                         
