--- a/views/front/sozluk/single.ejs
+++ b/views/front/sozluk/single.ejs
@@ -66,7 +66,7 @@
                                     </div>
                                     <div style="flex:4">
                                         
-                                        <h3 class="text-lg font-semibold" style="float: right; text-align: right;">
+                                        <h3 class="text-lg font-semibold">
                                         <span style="
                                             text-transform: lowercase; 
                                             display: inline-block;
