--- a/views/front/medya/medyaic.ejs
+++ b/views/front/medya/medyaic.ejs
@@ -1,5 +1,21 @@
 <% layout("../layout") %>
-<%- include ../part/headerflex.ejs  %>
+<header
+style="display: flex; height: 50px; padding-left: 2vw; padding-top: 10px; border-radius: 20px;">
+<div style="flex: 1;">
+    <a href="/">
+        <ion-icon name="chevron-back-outline" style="color: gray; float: left;" class="text-3xl"></ion-icon>
+    </a>
+</div>
+<div style="flex: 15;">
+    <h3 style="margin-top: 0px;" class="text-lg font-semibold">
+        <%= medya.title.substring(0,40) %>
+        <ion-icon class="text-2xl" style="text-align: right; float: right; margin-top: 0px;"name="share-outline"></ion-icon>
+    </h3>
+</div>
+<div style="flex: 2;">
+    
+</div>
+</header>
 
         <div class="main_content">
             <div class="mcontainer">
@@ -46,9 +62,9 @@
                         </div>
                     </div>
                     <div class="card-body" style="margin-left: -7px;">
-                        <div class="text-xs font-semibold uppercase text-yellow-500">
+                        <!-- <div class="text-xs font-semibold uppercase text-yellow-500">
                             <%= medya.title %>
-                        </div>
+                        </div> -->
                         <div class="ext-lg font-medium mt-1 t" id="<%= medya._id %>">
                             <%- medya.aciklama.substring(0,150) %>... <a style="color: #03A9F4;" onclick="seeMore('<%=medya._id%>')">Devamını gör.</a>
                         </div>
