--- a/views/front/medya/medyaic.ejs
+++ b/views/front/medya/medyaic.ejs
@@ -27,7 +27,7 @@ style="display: flex; height: 50px; padding-left: 2vw; padding-top: 10px; border
                     </div>
                     <br>
                     <div style="display: flex; padding:4px">
-                        <div style="flex: 6;">
+                        <div style="flex: 1;">
                             <div class="profile_avatar">
                                 <div class="profile_avatar_holder">
                                     <img src="<%= medya.user.photo %>"
@@ -39,6 +39,10 @@ style="display: flex; height: 50px; padding-left: 2vw; padding-top: 10px; border
                                     <ion-icon name="camera" class="text-xl"></ion-icon>
                                 </div>
                             </div>
+                        </div>
+                        <div style="flex:10; padding-top: 3px;">
+                            <span style="margin-top: 20px;"><b>Abdullah Bektaş</b></span><br>
+                            <span style="margin-top: 20px;"><b><small><%= moment(medya.createdAt,"ddd MMM DD YYYY HH:mm:ss GMT Z'").fromNow(true) %> önce</small></b></span>
                         </div>
                         <div style="flex: 6;">
                             <h3 class="text-lg font-semibold" style=" text-align: right;">
